# parallel-computing

./: CMakeLists.txt
OMP_4_tasks/: 1.cpp  2.cpp  3.cpp  4.cpp
task1/: DiningPhilosophers.cpp
task2/: PolygonArea.cpp
